2011-02-10  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/common/dtrace.c: Assigned g_ofp to stdout in main function for
	stdout is a macro and not be address constants at compile time.
	* demo/*: Add more test cases.
	* runtest.sh: Added.
	* libdtrace/makefile: Adjust regs.d.
	* makefile: Adjust.

2011-01-26  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/makefile (signal.d): Exchange the line of SIGCLD and
	SIGCHLD, SIGPOLL and SIGIO.
	(install): Install errno.d regs.d signal.d unistd.d to the
	/usr/lib/dtrace.
	* libdtrace/i386/regs.sed.in: Remove @.

2011-01-21  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_open.c: Fix the directory of _dtrace_defcpp.
	* libdtrace/io.sed.in, ip.sed.in, net.sed.in, procfs.sed.in,
	sysevent.sed.in, tcp.sed.in, udp.sed.in, i386/regs.sed.in: Remove the
	header files that are not existed.
	* libdtrace/makefile: Compile the D library and install to
	/usr/lib/dtrace.

2011-01-10  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Psymtab.c (get_saddrs): Initial addrs to NULL.

2011-01-07  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Psymtab.c (rd_loadobj_iter): Fix this function to get
	the right data of the library.

2010-12-24  Shujing Zhao  <pearly.zhao@oracle.com>

	* librtld/rtld_db.c: Move rd_loadobj_iter to ...
	* libproc/common/Psymtab.c: here and remove the first parameter rap
	and adjust the callers.
	* include/rtld_db.h (rd_loadobj_iter): Remove.
	* libproc/common/Pcontrol.h (rd_loadobj_iter): Declare.

2010-12-17  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/common/dtrace.c: set environment variable POSIXLY_CORRECT to
	make getopt works on Linux.

2010-12-07  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_proc.c (dt_proc_control): Set dpr->dpr_quit to 1
	instead of write ctl file.
	* libproc/common/Pcontrol.c (Pxcreate): Don't detach to the child
	process.
	(Psetrun): Restarts the stopped child process by ptrace instead of
	write to the ctl file.